force-app/main/default/objects/Invoice_Hardware_Item__c/Invoice_Hardware_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Hardware Item</label>
    <nameField>
        <label>INV Fulfilment No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Hardware Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>