force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Account_for_regarding_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Account_for_regarding_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-3018</description>
    <label>Accounted for regarding Mapping</label>
    <type>Checkbox</type>
</CustomField>