force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <formula>OB_Invoice__r.Addressee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addressee</label>
    <type>Text</type>
</CustomField>