force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Date_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipping__c</fullName>
    <label>Date Shipping</label>
    <length>50</length>
    <type>Text</type>
</CustomField>