force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2750</description>
    <inlineHelpText>Copies email address from master object</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>