force-app/main/default/objects/Invoice_Hardware_Item__c/fields/GLS_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>GLS_Tracking_Link__c</fullName>
    <label>GLS Tracking Link</label>
    <type>Url</type>
</CustomField>