force-app/main/default/objects/Invoice_Hardware_Item__c/fields/InternalIDCustomer__c.field-meta.xml
<CustomField>
    <fullName>InternalIDCustomer__c</fullName>
    <label>Internal ID Customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>