force-app/main/default/objects/Invoice_Hardware_Item__c/fields/InternalIDHW__c.field-meta.xml
<CustomField>
    <fullName>InternalIDHW__c</fullName>
    <externalId>true</externalId>
    <label>Internal ID HW</label>
    <length>30</length>
    <type>Text</type>
</CustomField>