force-app/main/default/objects/Invoice_Hardware_Item__c/fields/INV_HWF_Po1__c.field-meta.xml
<CustomField>
    <fullName>INV_HWF_Po1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INV HWF Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>