force-app/main/default/objects/Invoice_Hardware_Item__c/fields/NetsuiteURL__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteURL__c</fullName>
    <label>Netsuite URL</label>
    <type>Url</type>
</CustomField>