force-app/main/default/objects/Invoice_Hardware_Item__c/fields/OB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>OB_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB Invoice</label>
    <referenceTo>OBInvoice__c</referenceTo>
    <relationshipLabel>Invoice Hardware Items</relationshipLabel>
    <relationshipName>Invoice_Hardware_Items</relationshipName>
    <type>Lookup</type>
</CustomField>