force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Salesorder_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesorder_Number__c</fullName>
    <formula>OB_Invoice__r.Salesorder_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesorder Number</label>
    <type>Text</type>
</CustomField>