force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Status_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Status_Shipping__c</fullName>
    <label>Status Shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>