force-app/main/default/objects/Invoice_Hardware_Item__c/fields/Tracking_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-2750</description>
    <label>Tracking Mail Sent</label>
    <type>Checkbox</type>
</CustomField>