force-app/main/default/objects/Invoice_Hardware_Item__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Article_Name__c</columns>
    <columns>Date_Shipping__c</columns>
    <columns>OB_Invoice__c</columns>
    <columns>SerialNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tracking_Mail_Sent__c</columns>
    <columns>Email_Address__c</columns>
    <columns>GLS_Tracking_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>all</label>
</ListView>