force-app/main/default/objects/Invoice_Hardware_Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Article_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>GLS_Tracking_Link__c</columns>
    <columns>InternalIDHW__c</columns>
    <columns>InternalIDSalesOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>